Add movement through PS4

--- a/Objects/Core Project.build_log.htm
+++ b/Objects/Core Project.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  02/27/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
+compiling main.c...
+compiling motor.c...
+linking...
+Program Size: Code=1144 RO-data=224 RW-data=4 ZI-data=264  
 ".\Objects\Core Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
