--- a/Objects/Core Project.build_log.htm
+++ b/Objects/Core Project.build_log.htm
@@ -26,20 +26,23 @@ Project File Date:  02/27/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'Target 1'
-compiling main.c...
+Rebuild target 'Target 1'
 compiling motor.c...
+assembling startup_MKL25Z4.s...
+compiling main.c...
+compiling system_MKL25Z4.c...
+compiling uart.c...
 linking...
-Program Size: Code=1144 RO-data=224 RW-data=4 ZI-data=264  
+Program Size: Code=1196 RO-data=224 RW-data=4 ZI-data=264  
 ".\Objects\Core Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.9.0.pack
-                ARM::CMSIS@5.9.0
-                CMSIS (Common Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.6.0
+                http://www.keil.com/pack/ARM.CMSIS.5.6.0.pack
+                ARM::CMSIS@5.6.0
+                CMSIS (Cortex Microcontroller Software Interface Standard)
+   * Component: CORE Version: 5.3.0
 
 Package Vendor: Keil
                 http://www.keil.com/pack/Keil.Kinetis_KLxx_DFP.1.15.0.pack
@@ -50,17 +53,17 @@ Package Vendor: Keil
 <h2>Collection of Component include folders:</h2>
   ./RTE/Device/MKL25Z128xxx4
   ./RTE/_Target_1
-  C:/Users/arifk/AppData/Local/Arm/Packs/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+  C:/Users/arifk/AppData/Local/Arm/Packs/ARM/CMSIS/5.6.0/CMSIS/Core/Include
   C:/Users/arifk/AppData/Local/Arm/Packs/Keil/Kinetis_KLxx_DFP/1.15.0/Device/Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE@5.6.0
+   * Component: ARM::CMSIS:CORE@5.3.0
 
    * Component: Keil::Device:Startup@2.5.0
-      Source file:   Device/Source/ARM/startup_MKL25Z4.s
-      Source file:   Device/Source/system_MKL25Z4.c
       Include file:  Device/Source/system_MKL25Z4.h
+      Source file:   Device/Source/system_MKL25Z4.c
+      Source file:   Device/Source/ARM/startup_MKL25Z4.s
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
