--- a/Objects/Core Project.htm
+++ b/Objects/Core Project.htm
@@ -3,11 +3,11 @@
 <title>Static Call Graph - [.\Objects\Core Project.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\Core Project.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6210000: Last Updated: Tue Feb 27 16:15:58 2024
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6210000: Last Updated: Tue Mar  5 13:54:30 2024
 <BR><P>
 <H3>Maximum Stack Usage =         32 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
-main &rArr; SystemCoreClockUpdate &rArr; __aeabi_uidiv
+main &rArr; initUART2 &rArr; __aeabi_uidiv
 <P>
 <H3>
 Mutually Recursive functions
@@ -59,7 +59,7 @@ Function Pointers
  <LI><a href="#[20]">TSI0_IRQHandler</a> from startup_mkl25z4.o(.text) referenced from startup_mkl25z4.o(RESET)
  <LI><a href="#[12]">UART0_IRQHandler</a> from startup_mkl25z4.o(.text) referenced from startup_mkl25z4.o(RESET)
  <LI><a href="#[13]">UART1_IRQHandler</a> from startup_mkl25z4.o(.text) referenced from startup_mkl25z4.o(RESET)
- <LI><a href="#[14]">UART2_IRQHandler</a> from startup_mkl25z4.o(.text) referenced from startup_mkl25z4.o(RESET)
+ <LI><a href="#[14]">UART2_IRQHandler</a> from uart.o(.text.UART2_IRQHandler) referenced from startup_mkl25z4.o(RESET)
  <LI><a href="#[1e]">USB0_IRQHandler</a> from startup_mkl25z4.o(.text) referenced from startup_mkl25z4.o(RESET)
  <LI><a href="#[28]">__main</a> from entry.o(.ARM.Collect$$$$00000000) referenced from startup_mkl25z4.o(.text)
  <LI><a href="#[26]">main</a> from main.o(.text.main) referenced from entry9a.o(.ARM.Collect$$$$0000000B)
@@ -222,9 +222,6 @@ Global Symbols
 <P><STRONG><a name="[13]"></a>UART1_IRQHandler</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, startup_mkl25z4.o(.text))
 <BR>[Address Reference Count : 1]<UL><LI> startup_mkl25z4.o(RESET)
 </UL>
-<P><STRONG><a name="[14]"></a>UART2_IRQHandler</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, startup_mkl25z4.o(.text))
-<BR>[Address Reference Count : 1]<UL><LI> startup_mkl25z4.o(RESET)
-</UL>
 <P><STRONG><a name="[1e]"></a>USB0_IRQHandler</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, startup_mkl25z4.o(.text))
 <BR>[Address Reference Count : 1]<UL><LI> startup_mkl25z4.o(RESET)
 </UL>
@@ -256,7 +253,10 @@ Global Symbols
 <P><STRONG><a name="[27]"></a>SystemInit</STRONG> (Thumb, 8 bytes, Stack size 0 bytes, system_mkl25z4.o(.text.SystemInit))
 <BR>[Address Reference Count : 1]<UL><LI> startup_mkl25z4.o(.text)
 </UL>
-<P><STRONG><a name="[31]"></a>extractAxisValues</STRONG> (Thumb, 28 bytes, Stack size 0 bytes, uart.o(.text.extractAxisValues))
+<P><STRONG><a name="[14]"></a>UART2_IRQHandler</STRONG> (Thumb, 24 bytes, Stack size 0 bytes, uart.o(.text.UART2_IRQHandler))
+<BR>[Address Reference Count : 1]<UL><LI> startup_mkl25z4.o(RESET)
+</UL>
+<P><STRONG><a name="[31]"></a>extractAxisValues</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, uart.o(.text.extractAxisValues))
 <BR><BR>[Called By]<UL><LI><a href="#[26]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -282,18 +282,16 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[26]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[33]"></a>stopMotor</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, motor.o(.text.stopMotor))
-<BR><BR>[Called By]<UL><LI><a href="#[26]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
-</UL>
-
 <P><STRONG><a name="[3f]"></a>__scatterload_copy</STRONG> (Thumb, 14 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_copy), UNUSED)
 
 <P><STRONG><a name="[40]"></a>__scatterload_null</STRONG> (Thumb, 2 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_null), UNUSED)
 
-<P><STRONG><a name="[41]"></a>__scatterload_zeroinit</STRONG> (Thumb, 14 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_zeroinit), UNUSED)
+<P><STRONG><a name="[33]"></a>stopMotor</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, motor.o(.text.stopMotor))
+<BR><BR>[Called By]<UL><LI><a href="#[26]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
+</UL>
 
-<P><STRONG><a name="[2f]"></a>initUART2</STRONG> (Thumb, 96 bytes, Stack size 8 bytes, uart.o(.text.initUART2))
-<BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = initUART2 &rArr; __aeabi_uidiv
+<P><STRONG><a name="[2f]"></a>initUART2</STRONG> (Thumb, 120 bytes, Stack size 16 bytes, uart.o(.text.initUART2))
+<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = initUART2 &rArr; __aeabi_uidiv
 </UL>
 <BR>[Calls]<UL><LI><a href="#[2e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_uidiv
 </UL>
@@ -301,7 +299,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[26]"></a>main</STRONG> (Thumb, 180 bytes, Stack size 0 bytes, main.o(.text.main))
-<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = main &rArr; SystemCoreClockUpdate &rArr; __aeabi_uidiv
+<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = main &rArr; initUART2 &rArr; __aeabi_uidiv
 </UL>
 <BR>[Calls]<UL><LI><a href="#[36]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;reverse
 <LI><a href="#[35]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;move
@@ -314,7 +312,9 @@ Global Symbols
 <LI><a href="#[2d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemCoreClockUpdate
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> entry9a.o(.ARM.Collect$$$$0000000B)
-</UL><P>
+</UL>
+<P><STRONG><a name="[41]"></a>__scatterload_zeroinit</STRONG> (Thumb, 14 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_zeroinit), UNUSED)
+<P>
 <H3>
 Local Symbols
 </H3><P>
