fix: fixes compile errors

--- a/Objects/Core Project.build_log.htm
+++ b/Objects/Core Project.build_log.htm
@@ -1,9 +1,10 @@
 <html>
-<body>
-<pre>
-<h1>µVision Build Log</h1>
+
+   <body>
+      <pre>
+<h1>ï¿½Vision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.39.0.0
+IDE-Version: ï¿½Vision V5.39.0.0
 Copyright (C) 2023 ARM Ltd and ARM Germany GmbH. All rights reserved.
 License Information: Arif Khalid, National University of Singapore, LIC=----
  
@@ -84,7 +85,10 @@ Package Vendor: Keil
       Include file:  Device/Source/system_MKL25Z4.h
       Source file:   Device/Source/ARM/startup_MKL25Z4.s
       Source file:   Device/Source/system_MKL25Z4.c
-Build Time Elapsed:  00:00:00
+      Source file:   Device/Source/ARM/startup_MKL25Z4.s
+Target not created.
+Build Time Elapsed:  00:00:01
 </pre>
-</body>
+   </body>
+
 </html>
